[package]
name = "limelightctl"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
cap-std = "3.4.2"
clap = { version = "4.5", features = ["cargo", "derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3"
url = "2.5"
